# ffxiv-chronowatcher

./: CHANGELOG.md  Cargo.toml  LICENSE.md  README.md
data/: weather_data.json
src/: eorzean_time.rs  eorzean_weather.rs  lib.rs  main.rs
tests/: test_eorzea_time.rs  test_eorzea_weather.rs  tests.rs
