[package]
name = "ffxiv-chronowatcher"
description = "Weather and Eorzean Time Library for Final Fantasy XIV"
repository = "https://github.com/pinapelz/ffxiv-chronowatcher"
readme = "README.md"
keywords = ["ffxiv", "eorzea", "weather", "time"]
version = "0.0.3"
edition = "2021"
exclude = [
    "src/main.rs",
]
license = "MIT"

[dependencies]
chrono = "0.4.38"
serde = "1.0.208"
serde_json = "1.0.125"
